--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@paper-design/shaders-react": "^0.0.54",
     "@supabase/supabase-js": "^2.57.4",
     "framer-motion": "^12.23.16",
