--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,11 @@ build/
 .env.local
 .env.development.local
 .env.test.local
-.env.production.local
+.env.production
+cloudbuild.yaml
+deploy.sh
+DEPLOYMENT_GUIDE.md
+nginx.conf
 
 # IDE and editor files
 .vscode/
